# drawing_window_imx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cnn.tflite
drawing_window_cpp/: README.md
drawing_window_cpp/src/: main.cpp  mouse_drawing.cpp  mouse_drawing.h  nn_model.h
drawing_window_python/: README.md  mouse_drawing.py  nn_model.py  requirements.txt  run.py  window.py
models/: README.md  pytorch2onnx.py  pytorch_model.py  train_pytorch.py  train_tf.py
scripts/: README.md  pytorch2tflite.py  requirements.txt  tf2quant_tflite.py
src/: main.cpp  mouse_drawing.cpp  mouse_drawing.h  nn_model.cpp  window.cpp  window.h
